# fuel_bedrock

./: README.md  pyproject.toml
src/fuel_bedrock/clients/: __init__.py  bedrock.py
src/fuel_bedrock/config/bedrock_runtime/: __init__.py  bedrock_runtime.yml
src/fuel_bedrock/inference/: __init__.py
src/fuel_bedrock/inference/ai21/: __init__.py
src/fuel_bedrock/inference/amazon/: __init__.py
src/fuel_bedrock/inference/anthropic/: __init__.py
src/fuel_bedrock/inference/cohere/: __init__.py
src/fuel_bedrock/inference/meta/: __init__.py
src/fuel_bedrock/inference/mistral/: __init__.py
src/fuel_bedrock/models/inference/: common.py
src/fuel_bedrock/models/inference/ai21/: __init__.py
src/fuel_bedrock/models/inference/amazon/: __init__.py
src/fuel_bedrock/models/inference/anthropic/: __init__.py
src/fuel_bedrock/models/inference/cohere/: __init__.py
src/fuel_bedrock/models/inference/meta/: __init__.py
src/fuel_bedrock/models/inference/mistral/: __init__.py
