[build-system]
requires = ["boto3", "pydantic", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel_bedrock"
version = "0.0.6"
authors = [
    { name="Joe Small", email="jsmall@york.ie"}
]
description = "Helper methods for interacting with AWS Bedrock foundational models"
requires-python = ">=3.9"

[tool.setuptools.package-data]
"*" = ["*.yml"]

[tool.setuptools.data-files]
"data" = ["src/**/*.yml"]
